one more text added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <body>
             <p>Hi my name is Rahul</p>
+            <p>git version</p>
         </body>
     </head>
 </html>
