index.html text are added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <body>
             <p>Hi my name is Rahul</p>
             <p>git version</p>
+            <h1>Rahul BCA gratuate</h1>
         </body>
     </head>
 </html>
